<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chirp</string>
    <string name="action_settings">Settings</string>
    <string name="action_create_tweet">Tweet</string>
    <string name="action_view_profile">Profile</string>
    <string name="label_no_tweet">Add the status you want to share</string>
    <string name="username_label">UserName</string>
    <string name="name_label">Name</string>
    <string name="tagline_label">Tagline</string>
    <string name="followers_label">Followers</string>
    <string name="following_label">Following</string>
    <string name="tweets_label">Tweets</string>
    <string name="body_label">Body</string>
    <string name="relTime_label">Time posted</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="reply_label">Reply</string>
    <string name="retweet_label">Re-chirp</string>
    <string name="like_label">Like</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="label_tweet">Tweet</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="label_current_name">Current name</string>
    <string name="label_current_username">Username</string>
    <string name="label_tweet_body">Tweet body</string>
    <string name="warning_tweet_too_long">Tweet is too long</string>
    <string name="label_tweet_hint">What\'s happening?</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>