<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#f5f8fa">

    <Button
        android:id="@+id/btnSubmitTweet"
        style="@style/ButtonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignBottom="@+id/tvCurrentUserName"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button_twitter_gb"
        android:onClick="createTweet"
        android:text="@string/label_tweet" />

    <ImageView
        android:id="@+id/ivCurrentProfImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@+id/tvCurrentName"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvCurrentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textColor="#292f33"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/ivCurrentProfImg"
        android:text="@string/label_current_name" />

    <TextView
        android:id="@+id/tvCurrentUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCurrentName"
        android:layout_toRightOf="@+id/ivCurrentProfImg"
        android:text="@string/label_current_username" />

    <EditText
        android:id="@+id/etTweetBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnSubmitTweet"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:background = "@android:color/transparent"
        android:hint="@string/label_tweet_hint"
        android:textColor="#65757f"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>
