<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:padding="7dp"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/ivProfileImg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />
	
	<RelativeLayout
  	  android:layout_width="match_parent"
    	android:layout_height="match_parent" 
    	android:paddingLeft="5dp"
    	android:layout_toRightOf="@+id/ivProfileImg" >
    	
	    <TextView
	        android:id="@+id/tvName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_alignParentLeft="true"
	        android:textStyle="bold"
	        android:paddingRight="5dp"
	        android:textColor="#292f33"
	        android:textSize="12sp"
	        android:text="@string/name_label" />
	
	    <TextView
	        android:id="@+id/tvBody"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/tvName"
	        android:layout_below="@+id/tvName"
	        android:textSize="12sp"
	        android:layout_marginTop="5dp"
	        android:autoLink="all"
	        android:clickable="true"
	        android:text="@string/body_label" />
	
	    <TextView
	        android:id="@+id/tvUserName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/tvBody"
	        android:layout_toRightOf="@+id/tvName"
	        android:textColor="#8899a6"
	        android:textSize="12sp"
	        android:text="@string/username_label" />

	    <TextView
	        android:id="@+id/tvTimePosted"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:textSize="12sp"
	        android:text="@string/relTime_label" />
	    
	
	    <RelativeLayout
	        android:id="@+id/ivShare"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:paddingTop="10dp"
	        android:layout_below="@+id/tvBody" >

	        <ImageView
	            android:id="@+id/ivReply"
	            android:layout_width="15dp"
	            android:layout_height="15dp"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:onClick="replyTweet"
	            android:src="@drawable/reply"
	            android:text="@string/reply_label" />

	        <TextView
	            android:id="@+id/tvLike"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentTop="true"
	            android:textSize="12sp"
	            android:text="@string/like_label" />

	        <TextView
	            android:id="@+id/tvRetweet"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:textSize="12sp"
	            android:text="@string/reply_label" />

	        <ImageView
	            android:id="@+id/ivRetweet"
	            android:layout_width="15dp"
	            android:layout_height="15dp"
	            android:layout_alignParentTop="true"
	            android:layout_toLeftOf="@+id/tvRetweet"
	            android:src="@drawable/retweet" />

	        <ImageView
	            android:id="@+id/ivFavorite"
	            android:layout_width="15dp"
	            android:layout_height="15dp"
	            android:layout_alignParentTop="true"
	            android:layout_toLeftOf="@+id/tvLike"
	            android:src="@drawable/favorite" />
	        
		</RelativeLayout>

	</RelativeLayout>
</RelativeLayout>
