<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f8fa"
    android:padding="7dp" >

    <ImageView
        android:id="@+id/ivProfileImg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:id="@+id/rvTweetContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_toRightOf="@+id/ivProfileImg"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingRight="5dp"
            android:text="@string/name_label"
            android:textColor="#292f33"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvBody"
            android:layout_below="@+id/tvName"
            android:text="@string/username_label"
            android:textColor="#8899a6"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvName"
            android:layout_below="@+id/tvUserName"
            android:autoLink="all"
            android:clickable="true"
            android:text="@string/body_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTimePosted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvBody"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/relTime_label"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        style="@style/ButtonSubmit"
        android:background="@drawable/button_twitter_gb"
        android:onClick="replyTweet"
        android:text="@string/label_tweet" />

    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignLeft="@+id/ivShare"
        android:layout_below="@+id/rvTweetContent"
        android:background="#ccd6dd" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_alignLeft="@+id/ivShare"
        android:layout_below="@+id/ivShare"
        android:background="#ccd6dd" />

    <EditText
        android:id="@+id/etReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/view1"
        android:background="@android:color/transparent"
        android:ems="10"
        android:textColor="#65757f" >

        <requestFocus />
    </EditText>

    <RelativeLayout
        android:id="@+id/ivShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/rvTweetContent"
        android:layout_below="@+id/rvTweetContent"
        android:layout_marginTop="3dp"
        android:padding="3dp" >

        <ImageView
            android:id="@+id/ivReply"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="replyTweet"
            android:src="@drawable/reply"
            android:text="@string/reply_label" />

        <ImageView
            android:id="@+id/ivRetweet"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="76dp"
            android:layout_toRightOf="@+id/ivReply"
            android:src="@drawable/retweet" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="75dp"
            android:layout_toRightOf="@+id/ivRetweet"
            android:src="@drawable/favorite" />

        <ImageView
            android:id="@+id/ivShareAction"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_share" />

    </RelativeLayout>

</RelativeLayout>